name:                blag
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/ajmccluskey/blag#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew McCluskey
maintainer:          andrew@ajmccluskey.com
copyright:           Andrew McCluskey
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blag
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*
